tests/negative/gold/named_test.gold
tests/negative/named_test.toit:7:5: error: Argument mismatch for 'x'
No argument named '--val'
    x --val=499
    ^
Compilation failed.
